# seaography

./: .gitignore  CHANGELOG.md  CONTRIBUTOR.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE.md  flake.nix  rustfmt.toml
cli/: Cargo.toml
cli/src/: main.rs
derive/: Cargo.toml  README.md
derive/src/: enumeration.rs  error.rs  filter.rs  lib.rs  mutation.rs  query_entity.rs  relation.rs  root_query.rs
derive/src/entity/: entity_enums.rs  entity_filter.rs  entity_recursive_filter.rs  entity_relations.rs
discoverer/: Cargo.toml  README.md
discoverer/src/: error.rs  lib.rs  mysql.rs  postgres.rs  sqlite.rs  utils.rs
discoverer/src/test_cfg/: mod.rs
examples/mysql/: .env  Cargo.toml  README.md  sakila-data.sql  sakila-schema.sql
examples/mysql/src/: lib.rs  main.rs  query_root.rs
examples/mysql/src/entities/: actor.rs  address.rs  category.rs  city.rs  country.rs  customer.rs  film.rs  film_actor.rs  film_category.rs  film_text.rs  inventory.rs  language.rs  mod.rs  payment.rs  prelude.rs  rental.rs  sea_orm_active_enums.rs  staff.rs  store.rs
examples/mysql/src/graphql/: root_node.rs
examples/mysql/src/graphql/entities/: actor.rs  address.rs  category.rs  city.rs  country.rs  customer.rs  film.rs  film_actor.rs  film_category.rs  film_text.rs  inventory.rs  language.rs  mod.rs  payment.rs  rental.rs  staff.rs  store.rs
examples/mysql/src/graphql/enums/: mod.rs  rating.rs
examples/mysql/src/orm/: actor.rs  address.rs  category.rs  city.rs  country.rs  customer.rs  film.rs  film_actor.rs  film_category.rs  film_text.rs  inventory.rs  language.rs  mod.rs  payment.rs  prelude.rs  rental.rs  sea_orm_active_enums.rs  staff.rs  store.rs
examples/mysql/tests/: guard_mutation_tests.rs  guard_tests.rs  mutation_tests.rs  offset_pagination_query_tests.rs  query_tests.rs
examples/postgres/: .env  Cargo.toml  README.md  dvdrental-data.sql  dvdrental-schema.sql  sakila-patch.sql  sakila-schema.sql
examples/postgres/src/: lib.rs  main.rs  query_root.rs
examples/postgres/src/entities/: actor.rs  address.rs  category.rs  city.rs  country.rs  customer.rs  film.rs  film_actor.rs  film_category.rs  inventory.rs  language.rs  mod.rs  payment.rs  prelude.rs  rental.rs  sea_orm_active_enums.rs  staff.rs  store.rs
examples/postgres/src/graphql/: mod.rs  root_node.rs  type_filter.rs
examples/postgres/src/graphql/entities/: actor.rs  address.rs  category.rs  city.rs  country.rs  customer.rs  film.rs  film_actor.rs  film_category.rs  inventory.rs  (+6 more)
examples/postgres/src/orm/: actor.rs  address.rs  category.rs  city.rs  country.rs  customer.rs  film.rs  film_actor.rs  film_category.rs  inventory.rs  language.rs  mod.rs  payment.rs  prelude.rs  rental.rs  sea_orm_active_enums.rs  staff.rs  store.rs
examples/postgres/tests/: entity_metadata_tests.rs  guard_mutation_tests.rs  guard_tests.rs  more_query_tests.rs  mutation_tests.rs  offset_pagination_query_tests.rs  pg_query_tests.rs  query_array_tests.rs  query_tests.rs  schema_meta_tests.rs
examples/sea-draw/: .env  .gitignore  Cargo.toml  integration_test_postgres.sh  integration_test_sqlite.sh  postgres_test.sh  sqlite_test.sh
examples/sea-draw/schema/: postgres.sql  sqlite.sql
examples/sea-draw/src/: backend.rs  client_test.rs  lib.rs  mutations.rs  queries.rs  schema.rs  server.rs  subscriptions.rs  types.rs
examples/sea-draw/src/client/: client.rs  graphql.rs  mod.rs
examples/sea-draw/src/entities/: accounts.rs  drawings.rs  mod.rs  objects.rs  prelude.rs  project_permissions.rs  projects.rs  sea_orm_active_enums.rs
examples/sqlite/: .env  Cargo.toml  README.md  chinook.db  sakila-schema.sql
examples/sqlite/src/: lib.rs  main.rs  query_root.rs  rbac.rs
examples/sqlite/src/entities/: actor.rs  address.rs  albums.rs  artists.rs  category.rs  city.rs  country.rs  customer.rs  customers.rs  employees.rs  empty_table.rs  film.rs  film_actor.rs  film_category.rs  film_text.rs  genres.rs  inventory.rs  invoice_items.rs  invoices.rs  language.rs  media_types.rs  mod.rs  payment.rs  playlist_track.rs  playlists.rs  prelude.rs  rental.rs  staff.rs  store.rs  tracks.rs
examples/sqlite/src/graphql/: mod.rs  orm_dataloader.rs  root_node.rs  type_filter.rs
examples/sqlite/src/orm/: albums.rs  artists.rs  customers.rs  employees.rs  genres.rs  invoice_items.rs  invoices.rs  media_types.rs  mod.rs  playlist_track.rs  playlists.rs  prelude.rs  tracks.rs
examples/sqlite/src/query_root/: custom_inputs.rs  custom_output.rs  mutations.rs  queries.rs  rbac.rs  types.rs
examples/sqlite/tests/: custom_mutation_tests.rs  custom_query_tests.rs  entity_filter_tests.rs  entity_guard_tests.rs  guard_mutation_tests.rs  guard_tests.rs  hook_guard_tests.rs  more_query_tests.rs  mutation_tests.rs  offset_pagination_query_tests.rs  plural_query_tests.rs  query_tests.rs  rbac_tests.rs
generator/: Cargo.toml  README.md
generator/src/: _Cargo.toml  core.rs  error.rs  inject_graphql.rs  lib.rs  parser.rs  sea_orm_codegen.rs  toml.rs  util.rs  writer.rs
generator/src/extended/: entity.rs  enumeration.rs  mod.rs  orm_dataloader.rs  root_node.rs  toml.rs  type_filter.rs
generator/src/files/: entity.rs  enumeration.rs  mod.rs  orm_dataloader.rs  root_node.rs  toml.rs  type_filter.rs
generator/src/generator/: entity.rs  enumeration.rs  mod.rs  orm_dataloader.rs  root_node.rs  toml.rs  type_filter.rs
generator/src/templates/: actix.rs  actix_cargo.toml  axum.rs  axum_cargo.toml  mod.rs  poem.rs  poem_cargo.toml
generator/src/test_cfg/: mod.rs
gql_macro/: Cargo.toml  README.md
gql_macro/src/: lib.rs
gql_macro/tests/: mutation.rs
macros/: Cargo.toml
macros/src/: convert_output.rs  custom_enum.rs  custom_fields.rs  custom_input.rs  custom_input_type.rs  custom_mutation.rs  custom_operation.rs  custom_output.rs  custom_output_type.rs  lib.rs  util.rs
seaography_discoverer/: Cargo.toml  README.md
seaography_discoverer/src/: error.rs  lib.rs  main.rs  mysql.rs  postgres.rs  sqlite.rs  utils.rs
types/: Cargo.toml
types/src/: column_meta.rs  enum_meta.rs  lib.rs  relationship_meta.rs  schema_meta.rs  table_meta.rs
(+126 files in other folders)
