[workspace]
members = [".", "cli", "generator", "macros"]

[package]
name = "seaography"
version = "1.1.4"
edition = "2021"
rust-version = "1.70"
authors = [
    "Panagiotis Karatakis <panagiotiskaratakis@gmail.com>",
    "Chris Tsang <chris.2y3@outlook.com>",
]
description = "🧭 A dynamic GraphQL framework for SeaORM"
license = "MIT OR Apache-2.0"
homepage = "https://www.sea-ql.org/Seaography"
documentation = "https://docs.rs/seaography"
repository = "https://github.com/SeaQL/seaography"
keywords = ["async", "graphql", "mysql", "postgres", "sqlite"]
categories = ["database"]

[dependencies]
async-graphql = { version = "7.0", features = ["decimal", "chrono", "dataloader", "dynamic-schema"] }
sea-orm = { version = "1.1.15", default-features = false, features = ["seaography", "with-json"] }
seaography-macros = { version = "0.1.0", path = "macros", optional = true }
itertools = { version = "0.12.0" }
heck = { version = "0.4.1" }
thiserror = { version = "1.0.44" }
fnv = { version = "1.0.7" }
lazy_static = { version = "1.5" }
serde_json = { version = "1.0" }
pluralizer = { version = "0.5", optional = true }
time = { version = "0.3", features = ["formatting"], optional = true }

[features]
default = ["field-camel-case"]
macros = ["seaography-macros"]
with-json = ["sea-orm/with-json"]
with-chrono = ["sea-orm/with-chrono", "async-graphql/chrono"]
with-time = ["sea-orm/with-time", "async-graphql/time", "time"]
with-uuid = ["sea-orm/with-uuid", "async-graphql/uuid"]
with-decimal = ["sea-orm/with-rust_decimal", "async-graphql/decimal"]
with-bigdecimal = ["sea-orm/with-bigdecimal", "async-graphql/bigdecimal"]
with-postgres-array = ["sea-orm/postgres-array"]
# with-ipnetwork = ["sea-orm/with-ipnetwork"]
# with-mac_address = ["sea-orm/with-mac_address"]
field-snake-case = []
field-camel-case = []
field-pluralize = ["pluralizer"]

# [patch.crates-io]
# sea-orm = { git = "https://github.com/SeaQL/sea-orm" }
# sea-orm-migration = { git = "https://github.com/SeaQL/sea-orm" }
