[package]
name = "seaography-cli"
version = "0.1.1"
edition = "2021"
rust-version = "1.60"
authors = ["Panagiotis Karatakis <panagiotiskaratakis@gmail.com>"]
description = "🧭 A GraphQL framework and code generator for SeaORM"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/seaography"
repository = "https://github.com/SeaQL/seaography"
keywords = ["async", "graphql", "mysql", "postgres", "sqlite"]
categories = ["database"]

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes", "tokio1" ] }
clap = { version = "3.2.20", features = ["derive"] }
seaography-generator = { version = "^0.1.1", path = "../generator" }
seaography-discoverer = { version = "^0.1.1", path = "../discoverer" }
url = "2.2.2"