[package]
name = "seaography-cli"
version = "1.0.0-rc.4"
edition = "2021"
rust-version = "1.70"
authors = ["Panagiotis Karatakis <panagiotiskaratakis@gmail.com>"]
description = "🧭 A GraphQL framework and code generator for SeaORM"
license = "MIT OR Apache-2.0"
homepage = "https://www.sea-ql.org/Seaography"
documentation = "https://docs.rs/seaography"
repository = "https://github.com/SeaQL/seaography"
keywords = ["async", "graphql", "mysql", "postgres", "sqlite"]
categories = ["database"]

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes", "tokio1" ] }
clap = { version = "4.3.19", features = ["derive"] }
seaography-generator = { version = "^1.0.0-rc.4", path = "../generator" }
url = "2.4.0"