[package]
name = "seaography-cli"
version = "2.0.0-rc.3"
edition = "2021"
rust-version = "1.70"
authors = ["Panagiotis Karatakis <panagiotiskaratakis@gmail.com>"]
description = "🧭 A GraphQL framework for Rust"
license = "MIT OR Apache-2.0"
homepage = "https://www.sea-ql.org/Seaography"
documentation = "https://docs.rs/seaography"
repository = "https://github.com/SeaQL/seaography"
keywords = ["async", "graphql", "mysql", "postgres", "sqlite"]
categories = ["database"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.3.19", features = ["env", "derive"] }
seaography-generator = { version = "~2.0.0-rc.3", path = "../generator" }
url = "2.4.0"