[package]
name = "seaography-derive"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["Panagiotis Karatakis <panagiotiskaratakis@gmail.com>"]
description = "🧭 A GraphQL framework and code generator for SeaORM"
license = "MIT OR Apache-2.0"
homepage = "https://www.sea-ql.org/Seaography"
documentation = "https://docs.rs/seaography"
repository = "https://github.com/SeaQL/seaography"
keywords = ["async", "graphql", "mysql", "postgres", "sqlite"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
syn = { version = "1.0.99" }
proc-macro2 = "1.0.43"
bae = "0.1.7"
heck = "0.4.0"

[features]
default = []
with-chrono = []
with-decimal = []
with-json = []
with-uuid = []
