[package]
name = "seaography_discoverer"
version = "0.1.0"
edition = "2021"
authors = ["Panagiotis Karatakis <panagiotiskaratakis@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes", "tokio1" ] }
sea-schema = { version = "0.9.3", default-features = false, features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-async-std-native-tls", "discovery", "writer" ] }
sqlx = { version = "0.6.1", features = [ "sqlite", "mysql", "postgres", "runtime-async-std-native-tls", "all-types" ] }
itertools = "0.10.3"
heck = "0.4.0"
url = "2.2.2"