[package]
name = "seaography-discoverer"
version = "0.3.0"
edition = "2021"
rust-version = "1.60"
authors = ["Panagiotis Karatakis <panagiotiskaratakis@gmail.com>"]
description = "🧭 A GraphQL framework and code generator for SeaORM"
license = "MIT OR Apache-2.0"
homepage = "https://www.sea-ql.org/Seaography"
documentation = "https://docs.rs/seaography"
repository = "https://github.com/SeaQL/seaography"
keywords = ["async", "graphql", "mysql", "postgres", "sqlite"]
categories = ["database"]

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sea-schema = { version = "^0.11.0", default-features = false, features = [
  "sqlx-sqlite",
  "sqlx-mysql",
  "sqlx-postgres",
  "runtime-async-std-native-tls",
  "discovery",
  "writer",
] }
sqlx = { version = "^0.6.1", features = [
  "sqlite",
  "mysql",
  "postgres",
  "runtime-async-std-native-tls",
  "all-types",
] }
itertools = "0.10.3"
heck = "0.4.0"
url = "2.2.2"
