[package]
name = "seaography-generator"
version = "1.0.0"
edition = "2021"
rust-version = "1.60"
authors = ["Panagiotis Karatakis <panagiotiskaratakis@gmail.com>"]
description = "🧭 A GraphQL framework and code generator for SeaORM"
license = "MIT OR Apache-2.0"
homepage = "https://www.sea-ql.org/Seaography"
documentation = "https://docs.rs/seaography"
repository = "https://github.com/SeaQL/seaography"
keywords = ["async", "graphql", "mysql", "postgres", "sqlite"]
categories = ["database"]

[dependencies]
quote = "1.0.23"
proc-macro2 = "1.0.51"
syn = { version = "1.0.109", features = ["full"] }
heck = "0.4.1"
itertools = "0.10.5"
sea-query = { version = "0.29.0-rc.2", default-features = false }
thiserror = "1.0.38"