[package]
name = "seaography-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
darling = "0.21.1"
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
quote = { version = "1", default-features = false }
heck = { version = "0.5", default-features = false }
proc-macro2 = { version = "1", default-features = false }

[features]
opt-in-custom-types = []