[package]
name = "seaography-macros"
version = "2.0.0-rc.6"
edition = "2024"
rust-version = "1.85"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
description = "Macros for Seaography"
license = "MIT OR Apache-2.0"
homepage = "https://www.sea-ql.org/Seaography"
documentation = "https://docs.rs/seaography"
repository = "https://github.com/SeaQL/seaography"
keywords = ["async", "graphql", "mysql", "postgres", "sqlite"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
darling = "0.21.1"
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
quote = { version = "1", default-features = false }
heck = { version = "0.5", default-features = false }
proc-macro2 = { version = "1", default-features = false }

[features]
strict-custom-types = []