[package]
name = "seaography_discoverer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes", "tokio1" ] }
serde_json = "1.0.81"
serde = "1.0.137"
clap = { version = "3.2.6", features = ["derive"] }
sea-schema = { version = "0.8.1", default-features = false, features = ["sqlx-sqlite", "runtime-async-std-native-tls", "discovery" ] }
sqlx = { version = "0.5.0", features = [ "sqlite", "runtime-async-std-native-tls" ] }
seaography_types = { path = "../seaography_types/" }