[package]
name = "seaography_discoverer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes", "tokio1" ] }
serde_json = "1.0.81"
serde = "1.0.137"
clap = { version = "3.2.6", features = ["derive"] }
sea-schema = { version = "0.8.1", default-features = false, features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-async-std-native-tls", "discovery", "writer" ] }
sqlx = { version = "0.5.0", features = [ "sqlite", "mysql", "postgres", "runtime-async-std-native-tls" ] }
seaography_types = { path = "../seaography_types/" }
itertools = "0.10.3"
url = "2.2.2"
heck = "0.4.0"