[package]
edition = "2021"
name = "seaography-mysql-example"
version = "2.0.0-rc.3"

[dependencies]
actix-web = { version = "4.5", default-features = false, features = ["macros"] }
async-graphql-actix-web = { version = "7.0" }
dotenv = "0.15.0"
sea-orm = { version = "~2.0.0-rc", features = ["sqlx-mysql", "runtime-tokio-native-tls", "seaography"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }

[dependencies.seaography]
path = "../../"
version = "~2.0.0-rc.3" # seaography version
features = ["with-decimal", "with-chrono"]

[dev-dependencies]
serde_json = { version = "1.0.103" }

[workspace]
members = []
