[package]
edition = "2021"
name = "seaography-mysql-example"
version = "2.0.0-rc.4"

[dependencies]
actix-web = { version = "4.11" }
async-graphql-actix-web = { version = "7.0" }
dotenv = "0.15.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }

[dependencies.sea-orm]
version = "~2.0.0-rc"
features = ["sqlx-mysql", "runtime-tokio-native-tls", "seaography"]

[dependencies.seaography]
path = "../../"
version = "~2.0.0-rc.4" # seaography version
features = ["graphql-playground", "with-decimal", "with-chrono"]

[dev-dependencies]
serde_json = { version = "1.0.103" }

[workspace]
members = []
