[package]
edition = "2021"
name = "seaography-postgres-example"
version = "0.2.0"

[dependencies]
async-graphql = { version = "4.0.10", features = ["decimal", "chrono", "dataloader"] }
async-graphql-poem = { version = "4.0.10" }
async-trait = { version = "0.1.53" }
dotenv = "0.15.0"
poem = { version = "1.3.29" }
sea-orm = { version = "^0.10", features = ["sqlx-postgres", "runtime-async-std-native-tls"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.34" }
tracing-subscriber = { version = "0.3.11" }
lazy_static = { version = "1.4.0" }

[dependencies.seaography]
path = "../../" # remove this line in your own project
version = "^0.2" # seaography version
features = ["with-decimal", "with-chrono"]

[dev-dependencies]
serde_json = { version = "1.0.82" }

[workspace]
members = []