[package]
name = "sea-draw"
version = "2.0.0-rc.3"
edition = "2024"

[dependencies]
async-graphql = { version = "7.0", features = ["decimal", "chrono", "dataloader", "dynamic-schema"] }
async-graphql-axum = { version = "7" }
axum = { version = "0.8.*", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15.0"
reqwest = { version = "0.12", features = [
    "json",
    "deflate",
    "rustls-tls",
    "multipart",
], default-features = false }
sea-orm = { version = "~2.0.0-rc", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "seaography",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.103" }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }

[dependencies.seaography]
path = "../../"
version = "~2.0.0-rc.3" # seaography version
features = [
    "macros",
    "field-pluralize",
    "field-snake-case",
    "with-chrono",
    "with-json",
    "with-postgres-array",
    "with-uuid",
    "strict-custom-types",
]

[workspace]
members = []
