[package]
edition = "2021"
name = "seaography-sqlite-example"
version = "2.0.0-rc.1"

[dependencies]
actix-web = { version = "4.5", default-features = false, features = ["macros"] }
async-graphql-actix-web = { version = "7.0" }
dotenv = "0.15.0"
sea-orm = { version = "~2.0.0-rc", features = ["sqlx-sqlite", "runtime-async-std-rustls", "seaography"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }

[dependencies.seaography]
path = "../../"
version = "~2.0.0-rc.1" # seaography version
features = ["macros", "with-decimal", "with-chrono"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.103" }

[workspace]
members = []

[features]
field-pluralize = ["seaography/field-pluralize"]

[[test]]
name = "plural_query_tests"
path = "tests/plural_query_tests.rs"
required-features = ["field-pluralize"]
