[package]
edition = "2021"
name = "seaography-sqlite-example"
version = "2.0.0-rc.2"

[dependencies]
poem = { version = "3.0" }
async-graphql-poem = { version = "7.0" }
dotenv = "0.15.0"
sea-orm = { version = "~2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "seaography"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }

[dependencies.seaography]
version = "~2.0.0-rc.2" # seaography version
features = ["with-decimal", "with-chrono"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.103" }

[workspace]
members = []

[features]
rbac = ["seaography/rbac"]
field-pluralize = ["seaography/field-pluralize"]

[[test]]
name = "plural_query_tests"
path = "tests/plural_query_tests.rs"
required-features = ["field-pluralize"]
